Fix lockout in the scratchpad when using right button on a tablet

The tablet driver may generate mouse/tablet events in an interleaved
way, so we should make sure that not more than one stroke is started
at the same time.

BUG:431708