libs/ui/widgets/kis_scratch_pad.h
@@ -100,6 +100,7 @@ public:
     void pointerPress(KoPointerEvent *event);
     void pointerRelease(KoPointerEvent *event);
     void pointerMove(KoPointerEvent *event);
+    void resetState();
 
 public Q_SLOTS:
     void fillDefault();
